--- a/pracowania.ipynb
+++ b/pracowania.ipynb
@@ -62,6 +62,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e1dc72f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MRIPreprocessingPipeline:\n",
+    "    \"\"\"\n",
+    "    Pipeline do przetwarzania obrazów MRI (pojedyncze plastry 2D).\n",
+    "    Łączy kroki: resize z paddingem, normalizację, opcjonalnie augmentację.\n",
+    "    Można go używać w Dataset.__getitem__ oraz przy inference.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        target_size=(256, 256),\n",
+    "        normalize=True,\n",
+    "        norm_per_slice=True,\n",
+    "        clip_percentile=(1, 99),\n",
+    "    ):\n",
+    "        self.target_size = target_size\n",
+    "        self.normalize = normalize\n",
+    "        self.norm_per_slice = norm_per_slice  # normalizacja per plaster vs globalna\n",
+    "        self.clip_percentile = clip_percentile\n",
+    "    \n",
+    "    def _normalize_slice(self, img: np.ndarray) -> np.ndarray:\n",
+    "        \"\"\"Jedna plaster: clip percentylami + min-max do [0,1].\"\"\"\n",
+    "        lo, hi = np.percentile(img, self.clip_percentile)\n",
+    "        img = np.clip(img, lo, hi).astype(np.float32)\n",
+    "        if hi > lo:\n",
+    "            img = (img - lo) / (hi - lo)\n",
+    "        return img\n",
+    "    \n",
+    "    def process_image(self, image: np.ndarray, is_mask: bool = False) -> np.ndarray:\n",
+    "        \"\"\"\n",
+    "        Przetwarza jeden obraz 2D (plaster MRI lub maska).\n",
+    "        - image: numpy array 2D (H, W)\n",
+    "        - is_mask: True = interpolacja nearest, bez normalizacji\n",
+    "        \"\"\"\n",
+    "        out = resize_with_padding(image, self.target_size, is_mask=is_mask)\n",
+    "        if not is_mask and self.normalize and self.norm_per_slice:\n",
+    "            out = self._normalize_slice(out)\n",
+    "        return out\n",
+    "    \n",
+    "    def __call__(self, image: np.ndarray, is_mask: bool = False) -> np.ndarray:\n",
+    "        return self.process_image(image, is_mask=is_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "040019e0-d685-4406-8562-272beafbd2ce",
    "metadata": {},
@@ -89,103 +138,6 @@
     "# Użycie:\n",
     "brats_samples = prepare_brats_samples('/Users/filip/Desktop/INŻYNIERKA/datasets/BraTS2020 Dataset (Training + Validation)/BraTS2020_TrainingData')\n",
     "# dataset = MultiModalBrainDataset(brats_samples)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f859e8b4-2f35-40e4-8b0b-10b2df4c70c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from torch.utils.data import Dataset\n",
-    "import nibabel as nib\n",
-    "import numpy as np\n",
-    "import cv2\n",
-    "import os\n",
-    "\n",
-    "class MultiModalBrainDataset(Dataset):\n",
-    "    def __init__(self, samples_list):\n",
-    "        \"\"\"\n",
-    "        samples_list: lista słowników, np.:\n",
-    "        [{'flair': '...', 't1ce': '...', 't1': '...', 't2': '...', 'mask': '...', 'is_3d': True},\n",
-    "         {'image': '...', 'mask': '...', 'is_3d': False}]\n",
-    "        \"\"\"\n",
-    "        self.samples_list = samples_list\n",
-    "        self.final_samples = []\n",
-    "\n",
-    "        # TWORZENIE MAPY INDEKSÓW (Tniemy 3D na plastry)\n",
-    "        for sample in self.samples_list:\n",
-    "            if sample['is_3d']:\n",
-    "                # Sprawdzamy liczbę plastrów na podstawie jednego z plików\n",
-    "                header = nib.load(sample['flair']).header\n",
-    "                num_slices = header.get_data_shape()[2]\n",
-    "                for s in range(num_slices):\n",
-    "                    self.final_samples.append({\n",
-    "                        'paths': sample,\n",
-    "                        'slice_idx': s,\n",
-    "                        'is_3d': True\n",
-    "                    })\n",
-    "            else:\n",
-    "                self.final_samples.append({\n",
-    "                    'paths': sample,\n",
-    "                    'slice_idx': None,\n",
-    "                    'is_3d': False\n",
-    "                })\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.final_samples)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        s = self.final_samples[idx]\n",
-    "        paths = s['paths']\n",
-    "        \n",
-    "        if s['is_3d']:\n",
-    "            # 1. WCZYTUJEMY 4 KANAŁY DLA BraTS\n",
-    "            modalities = ['flair', 't1ce', 't1', 't2']\n",
-    "            channels = []\n",
-    "            \n",
-    "            # Wczytujemy każdy plik i wycinamy ten sam plaster\n",
-    "            for mod in modalities:\n",
-    "                vol = nib.load(paths[mod]).get_fdata()\n",
-    "                slice_data = np.rot90(vol[:, :, s['slice_idx']])\n",
-    "                # Twoja funkcja resize\n",
-    "                processed = resize_with_padding(slice_data, (256, 256), is_mask=False)\n",
-    "                # Normalizacja każdego kanału z osobna\n",
-    "                if np.max(processed) > 0:\n",
-    "                    processed = processed / np.max(processed)\n",
-    "                channels.append(processed)\n",
-    "            \n",
-    "            # Wczytujemy maskę\n",
-    "            mask_vol = nib.load(paths['mask']).get_fdata()\n",
-    "            mask_raw = np.rot90(mask_vol[:, :, s['slice_idx']])\n",
-    "            mask = resize_with_padding(mask_raw, (256, 256), is_mask=True)\n",
-    "            \n",
-    "        else:\n",
-    "            # 2. PRZYPADEK 2D (Figshare/Kaggle)\n",
-    "            img_2d = cv2.imread(paths['image'], cv2.IMREAD_GRAYSCALE)\n",
-    "            mask_2d = cv2.imread(paths['mask'], cv2.IMREAD_GRAYSCALE)\n",
-    "            \n",
-    "            processed = resize_with_padding(img_2d, (256, 256), is_mask=False)\n",
-    "            if np.max(processed) > 0:\n",
-    "                processed = processed / np.max(processed)\n",
-    "            \n",
-    "            mask = resize_with_padding(mask_2d, (256, 256), is_mask=True)\n",
-    "            \n",
-    "            # Aby sieć 4-kanałowa mogła \"zjeść\" obraz 2D, \n",
-    "            # musimy powtórzyć ten sam obraz 4 razy (duplikacja kanałów)\n",
-    "            channels = [processed, processed, processed, processed]\n",
-    "\n",
-    "        # 3. SKŁADANIE W TENSORY\n",
-    "        # stack tworzy wymiar kanałów na początku: (4, 256, 256)\n",
-    "        image_tensor = torch.from_numpy(np.stack(channels, axis=0)).float()\n",
-    "        \n",
-    "        # Maska zostaje 1-kanałowa: (1, 256, 256)\n",
-    "        mask = (mask > 0).astype(np.float32)\n",
-    "        mask_tensor = torch.from_numpy(mask).unsqueeze(0)\n",
-    "\n",
-    "        return image_tensor, mask_tensor"
    ]
   },
   {
@@ -238,60 +190,6 @@
     "plt.tight_layout()\n",
     "plt.subplots_adjust(top=0.95)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "9ee59c85-695d-4a1c-a864-c1aa8631773b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# 2. Pobieramy konkretny przykład (np. pacjent 001, plaster 80)\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Musisz znaleźć indeks w dataset.final_samples, który odpowiada temu plastrowi\u001b[39;00m\n\u001b[1;32m      9\u001b[0m idx_test \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m80\u001b[39m \u001b[38;5;66;03m# Przykładowy indeks (zależnie od tego, jak ułożyły się plastry)\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m image_tensor, mask_tensor \u001b[38;5;241m=\u001b[39m \u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx_test\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# 3. Wyświetlanie\u001b[39;00m\n\u001b[1;32m     13\u001b[0m modalities \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFLAIR (Obrzęk)\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT1ce (Rdzeń)\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT1 (Anatomia)\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT2 (Płyny)\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "Cell \u001b[0;32mIn[5], line 41\u001b[0m, in \u001b[0;36mMultiModalBrainDataset.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, idx):\n\u001b[0;32m---> 41\u001b[0m     s \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfinal_samples\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     42\u001b[0m     paths \u001b[38;5;241m=\u001b[39m s[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpaths\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     44\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m s[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mis_3d\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m     45\u001b[0m         \u001b[38;5;66;03m# 1. WCZYTUJEMY 4 KANAŁY DLA BraTS\u001b[39;00m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# 1. Przygotowanie danych (używamy klasy, którą napisałeś)\n",
-    "# Zakładamy, że masz już listę 'brats_samples' z poprzedniego kroku\n",
-    "dataset = MultiModalBrainDataset(brats_samples)\n",
-    "\n",
-    "# 2. Pobieramy konkretny przykład (np. pacjent 001, plaster 80)\n",
-    "# Musisz znaleźć indeks w dataset.final_samples, który odpowiada temu plastrowi\n",
-    "idx_test = 80 # Przykładowy indeks (zależnie od tego, jak ułożyły się plastry)\n",
-    "image_tensor, mask_tensor = dataset[idx_test]\n",
-    "\n",
-    "# 3. Wyświetlanie\n",
-    "modalities = ['FLAIR (Obrzęk)', 'T1ce (Rdzeń)', 'T1 (Anatomia)', 'T2 (Płyny)']\n",
-    "plt.figure(figsize=(20, 5))\n",
-    "\n",
-    "for i in range(4):\n",
-    "    plt.subplot(1, 5, i + 1)\n",
-    "    # Wyciągamy i-ty kanał z tensora (C, H, W) -> (H, W)\n",
-    "    plt.imshow(image_tensor[i], cmap='gray')\n",
-    "    plt.title(modalities[i])\n",
-    "    plt.axis('off')\n",
-    "\n",
-    "# Na końcu dodajemy maskę dla porównania\n",
-    "plt.subplot(1, 5, 5)\n",
-    "plt.imshow(mask_tensor[0], cmap='jet', alpha=0.5) # 'jet' nada kolor masce\n",
-    "plt.title('Maska (SEG)')\n",
-    "plt.axis('off')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "print(f\"Kształt wejściowy dla sieci (Input Shape): {image_tensor.shape}\")"
    ]
   },
   {
